<resources>
    <string name="app_name">NoonSaoomGame</string>
    <string name="app_title">EyeKernTech</string>
    <string name="app_version">version 1.0</string>
    <string name="player1">Player1 :</string>
    <string name="player2">Player2 :</string>
    <string name="chatting">채팅을 입력하세요</string>
    <string name="name">당신의 이름을 알려주세요</string>
    <string name="room_name">방 이름 : </string>
    <string name="room_name_hint">Room 1</string>
    <string name="password">방 암호를 입력하세요</string>
    <string name="vs">VS</string>
    <color name="white">#FFFFFF</color>

    <string name="Lobby">Lobby</string>
</resources>
