<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="500dp"
    android:background="@color/white"
    tools:context=".MakeNewRoom">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/textview_roomname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/roomname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/room_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"

        />

    <ImageButton
        android:id="@+id/Button_unlock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHorizontal_bias="0.121"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.443"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".15"

        app:srcCompat="@drawable/unlocked" />

    <ImageButton
        android:id="@+id/Button_lock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"

        app:layout_constraintEnd_toStartOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_roomname"
        app:layout_constraintVertical_bias="0.322"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".15"
        app:srcCompat="@drawable/locked" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password"

        android:inputType="textVisiblePassword"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/roomname"
        app:layout_constraintVertical_bias="0.076" />

    <ImageButton
        android:id="@+id/Button_make"
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/Button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.606"
        app:layout_constraintWidth_percent=".3"
        app:srcCompat="@drawable/make" />

    <ImageButton
        android:id="@+id/Button_back"
        android:layout_width="88dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>